<resources>
    <string name="app_name">WhatsApp</string>

    <!-- Tab Layout -->
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>

    <!-- Vibrate-->
    <string name="off">Off</string>
    <string name="defaultanswer">Default</string>
    <string name="tvshort">Short</string>
    <string name="tvlong">Long</string>
    <string name="defaultstring">Default</string>
    <string name="defaultbongo">Default ringtone (Bongo)</string>

    <!-- Pop-up notification-->
    <string name="nopopup">No popup</string>
    <string name="screenon">Only when screen is "on"</string>
    <string name="screenoff">Only when screen is "off"</string>
    <string name="alwaysshow">Always show popup</string>


    <!-- Colours-->
    <string name="none">None</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="cyan">Cyan</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>


    <!-- Home Status -->
    <string name="home_status_privacy_title">Status privacy</string>

    <!-- Search Menu Layout -->
    <string name="search">Search</string>
    <string name="new_group">New group</string>
    <string name="call_info">Call info</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="new_contact">New Contact</string>
    <string name="linked_devices">Linked devices</string>
    <string name="starred_messages">Starred messages</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_accounts_fragment">AccountsFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for account page in settings area -->
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="twofactorauth">Two-step verification</string>
    <string name="changenumber">Change number</string>
    <string name="requestaccountinfo">Request account info</string>
    <string name="deletemyaccount">Delete my account</string>


    <!-- Strings used for account page in chat settings area -->
    <string name="display">Display</string>
    <string name="theme">Theme</string>
    <string name="lightmode">Light</string>
    <string name="darkmode">Dark</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="enterIsSend">Enter is send</string>
    <string name="enterIsSendDesc">Enter Key will send your message</string>
    <string name="mediaVisibility">Media visibility</string>
    <string name="mediaVisibilityDesc">Show newly downloaded media in your phone\'s gallery</string>
    <string name="fontSize">Font Size</string>
    <string name="medium">Medium</string>
    <string name="chatBackup">Chat Backup</string>
    <string name="appLanguage">App Language</string>
    <string name="phoneLanguage">Phone\'s language</string>
    <string name="chatHistory">Chat History</string>
    <string name="archivedChats">Archived chats</string>
    <string name="archivedChatsTitle">Keep chats archived</string>
    <string name="archivedChatsDesc">Archived chats will remain archived when you receive a new message</string>

    <!-- Strings used for notification page in settings area -->
    <string name="conversationtones">Conversation tones</string>
    <string name="playsounds">Play sounds for incoming and outgoing messages</string>
    <string name="messages">Messages</string>
    <string name="notificationtone">Notification Tone</string>
    <string name="vibrate">Vibrate</string>
    <string name="popupnotification">Pop-up Notification</string>
    <string name="highpriority">Use high priority notification</string>
    <string name="previewnotification">Show previews of notification at the top of the screen</string>
    <string name="reactionnotification">Reaction Notification</string>
    <string name="shownotification">Show notifications for reactions to messages you send</string>
    <string name="groups">Groups</string>
    <string name="ringtone">Ringtone</string>

    <string name="chats_pin_title">Pin</string>
    <string name="chats_delete_title">Delete</string>
    <string name="chats_mute_title">Mute</string>
    <string name="chats_archive_title">Archive</string>
    <string name="chats_options_title">Options</string>
    <string name="chats_exit_group_title">Exit Group</string>
    <string name="chats_exit_groups_title">Exit Groups</string>
    <string name="chats_add_chat_shortcut_title">Add chat shortcut</string>
    <string name="chats_group_info_title">Group Info</string>
    <string name="chats_mark_unread_title">Mark as unread</string>
    <string name="chats_select_all_title">Select all</string>
    <string name="chats_add_to_contacts_title">Add to contacts</string>
    <string name="start_conversation_description">Start new chat</string>
    <string name="chats_view_contact_title">View contact</string>

    <!-- Call History -->
    <string name="call_history_send_message_title">Send message</string>
    <string name="call_history_remove_title">Remove from call log</string>
    <string name="call_history_block_title">Block</string>
    <string name="call_inbound">Inbound</string>
    <string name="call_outbound">Outbound</string>

    <!-- Home Calls -->
    <string name="home_calls_clear_log">Clear call log</string>
    <string name="capture_button_alt">capture</string>

    <!-- Contacts Menu Layout -->
    <string name="invite_friend">Invite a Friend</string>
    <string name="contacts">Contacts</string>
    <string name="refresh">Refresh</string>
    <string name="help">Help</string>

</resources>