<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/inviteFriend"
        android:title="@string/invite_friend"
        app:showAsAction="never" />

    <item
        android:id="@+id/contacts"
        android:title="@string/contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never" />

</menu>