<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/itemNewGroup"
        android:orderInCategory="1"
        android:title="@string/new_group"
        android:textColor="?android:textColorPrimary" />

    <item
        android:id="@+id/itemNewBroadcast"
        android:orderInCategory="2"
        android:title="@string/new_broadcast"
        android:textColor="?android:textColorPrimary"
        />

    <item
        android:id="@+id/itemLinkedDevices"
        android:orderInCategory="3"
        android:title="@string/linked_devices"
        android:textColor="?android:textColorPrimary"
        />

    <item
        android:id="@+id/itemStarredMessages"
        android:orderInCategory="4"
        android:title="@string/starred_messages"
        android:textColor="?android:textColorPrimary"
        />

    <item
        android:id="@+id/itemSettings"
        android:orderInCategory="5"
        android:title="@string/settings"
        android:textColor="?android:textColorPrimary"
        />

</menu>