<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/accountTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/ivPrivacyIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:src="@drawable/ic_lock" />

        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/ivPrivacyIcon"
            android:layout_alignParentEnd="true"
            android:text="@string/privacy" />
    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/securitytransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/tvSecurity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:src="@drawable/ic_security" />

        <TextView
            android:id="@+id/tvSecurityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/tvSecurity"
            android:layout_alignParentEnd="true"
            android:text="@string/security" />
    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/twofaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/tvAuthentication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:src="@drawable/ic_lock_verification" />

            <TextView
                android:id="@+id/tvAuthenticationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/tvAuthentication"
                android:layout_alignParentEnd="true"
                android:text="@string/twofactorauth" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/changeNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/tvchangeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:src="@drawable/ic_contact_phone" />

            <TextView
                android:id="@+id/tvchangeNumberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/tvchangeNumber"
                android:layout_alignParentEnd="true"
                android:text="@string/changenumber" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/requestLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/tvrequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:src="@drawable/ic_request_phone" />

            <TextView
                android:id="@+id/tvrequestChangeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/tvrequest"
                android:layout_alignParentEnd="true"
                android:text="@string/requestaccountinfo" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/deleteAccountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/tvdeleteAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:src="@drawable/ic_delete" />

            <TextView
                android:id="@+id/tvdeleteAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/tvdeleteAccount"
                android:layout_alignParentEnd="true"
                android:text="@string/deletemyaccount" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>